5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1601_1805.log
== TEST (2019-04-11 09:05:04) 
-- CODE:
import math
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite ya"))
xm = (xb+xa)/2
ym = (yb+ya)/2
print(round(xm, n))
print(round(ym, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(xm, n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 09:13:56) 
-- CODE:
import math
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite ya"))
xm = (xb+xa)/2
ym = (yb+ya)/2
print(round(xm, n))
print(round(ym, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(xm, n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 09:17:02) 
-- CODE:
import math
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite ya"))
xm = (xb+xa)/2
ym = (yb+ya)/2
print(round(xm, n))
print(round(ym, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(xm, n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 20:37:55) 
-- CODE:
import math
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite ya"))
xm = (xb+xa)/2
ym = (yb+ya)/2
print(round(xm, n))
print(round(ym, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(xm, n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 20:38:38) 
-- CODE:
import math
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite ya"))
xm = (xb+xa)/2
ym = (yb+ya)/2
print(round(xm, 2))
print(round(ym, 2))
-- OUTPUT:
37.5
39.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 20:48:15) 
-- CODE:
import math
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite ya"))
xm = ((xb+xa)/2)
ym = ((yb+ya)/2)
print(round(xm, 2))
print(round(ym, 2))
-- OUTPUT:
37.5
39.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 20:54:48) 
-- CODE:
import math
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite ya"))
xm = ((xa+ya)/2)
ym = ((xb+yb)/2)
print(round(xm, 2))
print(round(ym, 2))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 09:41:01) 
-- CODE:
import math
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite ya"))
xm = ((xa+ya)/2)
ym = ((xb+yb)/2)
print(round(xm, 2))
print(round(ym, 2))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 09:41:51) 
-- CODE:
import math
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite ya"))
xm = ((xa+ya)/2)
ym = ((xb+yb)/2)
print(round(xm, 2))
print(round(ym, 2))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 09:56:30) 
-- CODE:
import math
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite ya"))
xm = ((xa+ya)/2)
ym = ((xb+yb)/2)
print(round(xm, 2))
print(round(ym, 2))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 09:56:56) 
-- CODE:
import math
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite ya"))
xm = ((xa+ya)/2)
ym = ((xb+yb)/2)
print(round(xm, 2))
print(round(ym, 2))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 09:57:57) 
-- CODE:
import math
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite ya"))
xm = ((xa+ya)/2)
ym = ((xb+yb)/2)
print(round(xm, 2))
print(round(ym, 2))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 11:55:13) 
-- CODE:
import math
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite ya"))
xm = ((xa+ya)/2)
ym = ((xb+yb)/2)
print(round(xm, 2))
print(round(ym, 2))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 09:05:14) 
-- CODE:
import math
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite ya"))
xm = ((xb+xa)/2)
ym = ((yb+ya)/2)
print(round(xm, 2))
print(round(ym, 2))
-- OUTPUT:
37.5
39.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 09:09:05) 
-- CODE:
import math
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite ya"))
xm = ((xb+xa)/2)
ym = ((yb+ya)/2)
print(round(xm, 2))
print(round(ym, 2))
-- EXECUTION TIME:
0.131709
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
37.5
39.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
2.75
3.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
1.77
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 09:12:58) 
-- CODE:
import math
xa = float(input("digite xa"))
ya = float(input("digite ya"))
xb = float(input("digite xb"))
yb = float(input("digite ya"))
xm = ((xb+xa)/2)
ym = ((yb+ya)/2)
print(round(xm, 2))
print(round(ym, 2))
-- EXECUTION TIME:
0.120187
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 09:13:33) 
-- CODE:
import math
xa = float(input("digite xa"))
ya = float(input("digite ya"))
xb = float(input("digite xb"))
yb = float(input("digite ya"))
xm = ((xa+ya)/2)
ym = ((xb+yb)/2)
print(round(xm, 2))
print(round(ym, 2))
-- EXECUTION TIME:
0.201553
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
37.5
39.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
2.75
3.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
1.77
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 09:13:35) 
-- CODE:
import math
xa = float(input("digite xa"))
ya = float(input("digite ya"))
xb = float(input("digite xb"))
yb = float(input("digite ya"))
xm = ((xa+ya)/2)
ym = ((xb+yb)/2)
print(round(xm, 2))
print(round(ym, 2))
-- OUTPUT:
37.5
39.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 09:14:27) 
-- CODE:
import math
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite ya"))
xm = ((xa+ya)/2)
ym = ((xb+yb)/2)
print(round(xm, 2))
print(round(ym, 2))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 09:14:34) 
-- CODE:
import math
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite ya"))
xm = ((xa+ya)/2)
ym = ((xb+yb)/2)
print(round(xm, 2))
print(round(ym, 2))
-- EXECUTION TIME:
0.202473
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 09:15:51) 
-- CODE:
import math
xa = float(input("digite xa"))
xb = float(input("digite xb"))
ya = float(input("digite ya"))
yb = float(input("digite ya"))
xm = (xa+ya)/2
ym = (xb+yb)/2
print(round(xm, 1))
print(round(ym, 1))
-- EXECUTION TIME:
0.20303
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
